--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -71,9 +71,10 @@
         android:background="@drawable/your_rounded_shape">
 
         <ImageButton
+            android:id="@+id/imageButtonWeatherInfo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/weather_img"
+            android:src="@drawable/weather_menu_img"
             android:contentDescription="@string/weather_info"/>
 
         <TextView
@@ -98,6 +99,7 @@
         android:background="@drawable/your_rounded_shape">
 
         <ImageButton
+            android:id="@+id/imageButtonSoilInfo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/soil_analysis_img"
