--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name = "purple">#FF6750A4</color>
+    <color name="blue">#FF1E90FF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#FF027006</color>
+
 </resources>
