Add Part 1 Main Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="blue">#FF1E90FF</color>
     <color name="red">#FF0000</color>
     <color name="green">#FF027006</color>
-
+    <color name="mustard_yellow">#FFDB58</color>
 </resources>
