--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/mustard_yellow"
     tools:context=".MainMenu">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -34,17 +34,18 @@
 
 
     <FrameLayout
+        android:id="@+id/frameLayout3"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        android:background="@color/black">
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout">
 
         <ImageView
             android:layout_width="200dp"
             android:layout_height="180dp"
             android:layout_marginStart="100dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/farmer_logo"/>
+            android:src="@drawable/farmer_logo" />
 
         <TextView
             android:id="@+id/textViewUserName"
@@ -59,77 +60,119 @@
 
     </FrameLayout>
 
-
-    <FrameLayout
-        android:layout_width="180dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="440dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintCircleRadius="10dp"
-        android:background="@drawable/your_rounded_shape">
-
-        <ImageButton
-            android:id="@+id/imageButtonWeatherInfo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/weather_menu_img"
-            android:contentDescription="@string/weather_info"/>
-
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="30dp"
-            android:text="@string/weather_info"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/black"/>
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="180dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="212dp"
-        android:layout_marginTop="440dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/your_rounded_shape">
-
-        <ImageButton
-            android:id="@+id/imageButtonSoilInfo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/soil_analysis_img"
-            android:contentDescription="@string/soil_info"/>
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:text="@string/soil_info"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="@color/black"/>
-
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:background="@color/purple"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
-        app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/frameLayout3"
+        android:layout_marginTop="120dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="5dp">
+
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/agriculture" />
+
+            <Button
+                android:id="@+id/agriculturalSupportButton"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Agricultural and Weather Support" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="5dp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/manage_accounts" />
+
+            <Button
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Food Waste Managemnet" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="5dp">
+
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/collaboration_exchange" />
+
+            <Button
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Community Collaboration" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="5dp">
+
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/cast_for_education" />
+
+            <Button
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Education and Training Module" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="5dp">
+
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/assistance" />
+
+            <Button
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Poverty Assistance and Support" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
