Add Soil Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#FF0000</color>
     <color name="green">#FF027006</color>
     <color name="mustard_yellow">#FFDB58</color>
+    <color name="pullman_brown">#644117</color>
 </resources>
