--- a/app/src/main/res/layout/activity_main_soil.xml
+++ b/app/src/main/res/layout/activity_main_soil.xml
@@ -8,11 +8,34 @@
     android:background="@drawable/soil_analysis_img"
     tools:context=".Part1.soil_analysis.MainSoilActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/green"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/soilP1Toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:navigationIcon="@drawable/arrow_back"
+            app:title=" Soil Analysis"
+            app:titleTextColor="@color/white">
+
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="58dp"
         android:layout_marginTop="112dp"
         android:background="@drawable/your_rounded_shape"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +74,7 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="396dp"
+        android:layout_marginTop="350dp"
         android:background="@drawable/your_rounded_shape"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -63,21 +86,79 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="10dp"/>
 
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:text="Soil Analysis"
+            android:textStyle="bold"
+            android:textColor="@color/green"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:gravity="center"
+            android:textColor="@color/green"
+            android:text="Provide planting suggestion based on soil type"/>
+
+        <Button
+            android:id="@+id/soilAnalysisButtonP1"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/green"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="120dp"
+            android:text="Check >>"/>
+
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginStart="212dp"
-        android:layout_marginTop="396dp"
+        android:layout_marginTop="350dp"
         android:background="@drawable/your_rounded_shape"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/crop_management_icon"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/crop_management_icon"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:text="Crop Recomment"
+            android:textStyle="bold"
+            android:textColor="@color/green"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:gravity="center"
+            android:textColor="@color/green"
+            android:text="Provide planting time and management tips"/>
+
+        <Button
+            android:id="@+id/cropRecommentButtonP1"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/green"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="120dp"
+            android:text="Check >>"/>
 
     </FrameLayout>
 
