Add Soil Result

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="green">#FF027006</color>
     <color name="mustard_yellow">#FFDB58</color>
     <color name="pullman_brown">#644117</color>
+    <color name="grey">#808080</color>
 </resources>
