--- a/app/src/main/res/layout/activity_weather_next4.xml
+++ b/app/src/main/res/layout/activity_weather_next4.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="112dp"
         android:layout_marginTop="100dp"
+        android:gravity="center"
         android:text="London , GB"
         android:textSize="34sp"
         android:textStyle="bold"
