--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -165,6 +165,7 @@
                 app:srcCompat="@drawable/assistance" />
 
             <Button
+                android:id="@+id/povertyAssistanceButton"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
