--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -102,10 +102,11 @@
                 app:srcCompat="@drawable/manage_accounts" />
 
             <Button
+                android:id="@+id/foodWasteManagementBtn"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Food Waste Managemnet" />
+                android:text="Food Waste Management" />
 
         </LinearLayout>
 
