--- a/app/src/main/res/layout/activity_main_part5_s9.xml
+++ b/app/src/main/res/layout/activity_main_part5_s9.xml
@@ -26,7 +26,7 @@
         android:gravity="center"
         android:text="Please click to view location" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/locationListViewP5S9"
         android:layout_width="match_parent"
         android:layout_height="504dp"
@@ -40,13 +40,13 @@
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/backButtonP5S9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Back" />
-
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/backButtonP5S9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back" />
 
 </LinearLayout>
