--- a/app/src/main/res/layout/financial_item.xml
+++ b/app/src/main/res/layout/financial_item.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textViewDay"
+                android:id="@+id/textViewFinancialTitleP5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kinokuniya"
@@ -44,7 +44,7 @@
                         android:text="Amount: "/>
 
                     <TextView
-                        android:id="@+id/textViewDescription"
+                        android:id="@+id/textViewAmountP5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
