--- a/app/src/main/res/layout/financial_item.xml
+++ b/app/src/main/res/layout/financial_item.xml
@@ -2,12 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="@color/purple"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="3dp"
         android:orientation="horizontal"
         android:background="@color/white">
 
@@ -90,6 +91,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:text="DateLine: "/>
 
                     <TextView
@@ -98,6 +100,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:text="21/12/2024"
                         android:textSize="16sp"
                         app:layout_constraintTop_toTopOf="@id/textViewDay" />
