--- a/app/src/main/res/layout/activity_main_part5_s10.xml
+++ b/app/src/main/res/layout/activity_main_part5_s10.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <fragment
-        android:id="@+id/mapFrag"
+        android:id="@+id/mapFragP5S10"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
