--- a/app/src/main/res/layout/activity_main_part5_s2.xml
+++ b/app/src/main/res/layout/activity_main_part5_s2.xml
@@ -23,14 +23,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/locationListViewP5S2"
         android:layout_width="409dp"
-        android:layout_height="424dp"
-        android:layout_marginTop="168dp"
+        android:layout_height="550dp"
+        android:layout_marginTop="172dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/financial_item" />
+        tools:listitem="@layout/node_item" />
 
     <!-- Spinner for Financial Aid Items -->
 
@@ -51,14 +51,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/sortView"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="115dp"
+        android:background="@drawable/border4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/backButtonMainP5S2"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="632dp"
+        android:layout_marginTop="750dp"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/locationListViewP5S2"
         app:layout_constraintTop_toTopOf="parent" />
 
 
