--- a/app/src/main/res/layout/financial_item.xml
+++ b/app/src/main/res/layout/financial_item.xml
@@ -2,15 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/purple"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="5dp"
         android:orientation="horizontal"
-        android:background="@color/white">
+        android:background="@color/light_grey">
 
 
         <LinearLayout
@@ -23,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kinokuniya"
-                android:textColor="#2196F3"
+                android:textColor="@color/purple"
                 android:textSize="25sp"
                 android:layout_marginStart="10dp"/>
 
