--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="mustard_yellow">#FFDB58</color>
     <color name="pullman_brown">#644117</color>
     <color name="grey">#808080</color>
+    <color name="light_grey">#C0C0C0</color>
 </resources>
