--- a/app/src/main/res/layout/activity_main_part5_s4.xml
+++ b/app/src/main/res/layout/activity_main_part5_s4.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/yesButtonP5S3a"
+        android:id="@+id/yesButtonP5S4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/noButtonP5S3a"
+        android:id="@+id/noButtonP5S4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
