--- a/app/src/main/res/layout/activity_main_part5_s9a.xml
+++ b/app/src/main/res/layout/activity_main_part5_s9a.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_background"
     tools:context=".Part5.MainActivityPart5S9a">
 
 
