--- a/app/src/main/res/layout/financial_item.xml
+++ b/app/src/main/res/layout/financial_item.xml
@@ -24,6 +24,7 @@
                 android:text="Kinokuniya"
                 android:textColor="@color/purple"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 android:layout_marginStart="10dp"/>
 
             <LinearLayout
