--- a/app/src/main/res/layout/node_item.xml
+++ b/app/src/main/res/layout/node_item.xml
@@ -13,7 +13,7 @@
         android:layout_width="144dp"
         android:layout_height="144dp"
         android:layout_marginEnd="10dp"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:contentDescription="@string/DFAP_Financial_Aid_Image" />
 
     <TextView
@@ -23,8 +23,9 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:layout_marginEnd="10dp"
+        android:textStyle="bold"
         android:text="@string/DFAP_Financial_Aid_Name"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/purple"/>
 
     <TextView
         android:id="@+id/FinancialAidAmountP5"
