--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="pullman_brown">#644117</color>
     <color name="grey">#808080</color>
     <color name="light_grey">#C0C0C0</color>
+    <color name="teal_200">#80CBC4</color>
 </resources>
