--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mustard_yellow"
+    android:background="@drawable/main_background"
     tools:context=".MainMenu">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/frameLayout3"
-        android:layout_marginTop="120dp">
+        android:layout_marginTop="90dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -145,6 +145,7 @@
                 app:srcCompat="@drawable/cast_for_education" />
 
             <Button
+                android:id="@+id/educationTrainingButtonPart4"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
