--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="3dp"
         android:orientation="horizontal"
         android:background="@color/white">
 
@@ -16,6 +16,7 @@
             android:id="@+id/imageView"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_margin="5dp"
             app:srcCompat="@drawable/weather_icon" />
 
         <LinearLayout
@@ -28,8 +29,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textStyle="bold"
                 android:textColor="#2196F3"
                 android:textSize="20sp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="20dp"/>
