--- a/app/src/main/res/layout/financial_item.xml
+++ b/app/src/main/res/layout/financial_item.xml
@@ -30,83 +30,97 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Amount: "/>
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textViewAmountP5"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:text="Amount: "/>
+
+                        <TextView
+                            android:id="@+id/textViewAmountP5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:text="RM150"
+                            android:textSize="16sp"
+                            app:layout_constraintStart_toEndOf="@+id/textViewDay" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:text="RM150"
-                        android:textSize="16sp"
-                        app:layout_constraintStart_toEndOf="@+id/textViewDay" />
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:text="Available Slots: "/>
+
+                        <TextView
+                            android:id="@+id/textViewAvailableSlotP5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:text="1"
+                            android:textSize="16sp"
+                            app:layout_constraintTop_toTopOf="@id/textViewDay" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="DateLine: "/>
+
+                        <TextView
+                            android:id="@+id/textViewDateLineP5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="21/12/2024"
+                            android:textSize="16sp"
+                            app:layout_constraintTop_toTopOf="@id/textViewDay" />
+
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Available Slots: "/>
-
-                    <TextView
-                        android:id="@+id/textViewAvailableSlotP5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:text="1"
-                        android:textSize="16sp"
-                        app:layout_constraintTop_toTopOf="@id/textViewDay" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="DateLine: "/>
-
-                    <TextView
-                        android:id="@+id/textViewDateLineP5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="21/12/2024"
-                        android:textSize="16sp"
-                        app:layout_constraintTop_toTopOf="@id/textViewDay" />
-
-
-                </LinearLayout>
+                <ImageView
+                    android:id="@+id/financialItemImageP5"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/workspace1"
+                    android:layout_marginStart="50dp" />
 
             </LinearLayout>
 
