--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -124,6 +124,7 @@
                 app:srcCompat="@drawable/collaboration_exchange" />
 
             <Button
+                android:id="@+id/communityCollaborationButtonPart3"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
