--- a/app/src/main/res/layout/fragment_connection_part3.xml
+++ b/app/src/main/res/layout/fragment_connection_part3.xml
@@ -6,6 +6,68 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Part3.ConnectionFragmentPart3">
 
+    <LinearLayout
+        android:id="@+id/linearLayoutP3F1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/backgroundp3">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/green">
+
+            <LinearLayout
+                android:id="@+id/linearLayoutSearchP3F1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/background_search1"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/editTextFarmerConnectionP3F1"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    app:queryHint="Search here...."
+                    android:inputType="text"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:iconifiedByDefault="false"/>
+
+                <ImageView
+                    android:id="@+id/searchP3F1"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="3dp"
+                    app:srcCompat="@drawable/filter" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewP3F1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutP3F1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/connection_item_part3f1"/>
+
+    </LinearLayout>
 
 
 </FrameLayout>
