--- a/app/src/main/res/layout/node_item.xml
+++ b/app/src/main/res/layout/node_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
     android:layout_margin="8dp"
-    android:background="@color/light_grey">
+    android:background="@drawable/background_search1">
 
     <ImageView
         android:id="@+id/FinancialAidImageP5"
